Index overflow fixef

--- a/styles/modules/_footer.scss
+++ b/styles/modules/_footer.scss
@@ -1,6 +1,6 @@
 /* Footer */
 footer {
-  width: 96%;
+  max-width: 96%;
   background: linear-gradient(to right, #00093c, #2d0b00);
   color: #ffff;
   display: block;
