--- a/styles/modules/_index.scss
+++ b/styles/modules/_index.scss
@@ -6,6 +6,7 @@ $darkBlue: #35375a;
 // Global
 .ix-body {
   background-color: #bfbff0;
+  overflow-x: hidden;
 }
 
 .ix-section {
@@ -85,6 +86,7 @@ $darkBlue: #35375a;
 .ix-about {
   background-color: #dc4e76;
   border-radius: 1rem;
+  margin:10px;
   padding: 3rem;
   height: fit-content;
 }
@@ -103,6 +105,7 @@ $darkBlue: #35375a;
 
 .ix-coin {
   display: flex;
+  margin:10px;
   background-color: #5c4ae4;
   border-radius: 1rem;
   padding: 3rem;
@@ -149,4 +152,13 @@ $darkBlue: #35375a;
   font-weight: 600;
   border-radius: 10px;
   font-family: "Roboto", sans-serif;
+}
+
+@media only screen and (max-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+  .ix-section {
+    flex-direction: column ;
+  }
 }
